{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 15,
  "lineage": "672bd65c-fced-a90d-7a5b-2fb3c90c2afb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085c5e1d88d722545",
            "arn": "arn:aws:ec2:ap-south-1:854653744080:instance/i-0422e820f6beacade",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-pipeline-profile",
            "id": "i-0422e820f6beacade",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "cloudops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e34d686e0489dfa",
            "private_dns": "ip-10-0-1-215.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-43-205-191-105.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.191.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c100f9ffa2c070b7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09324770f58ca3342",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "devops-pipeline-server",
              "Owner": "Mounika Vasireddy",
              "Project": "devops-pipeline"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "devops-pipeline-server",
              "Owner": "Mounika Vasireddy",
              "Project": "devops-pipeline"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049c5ef130198e24b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:854653744080:internet-gateway/igw-064a64b2b1a18ca65",
            "id": "igw-064a64b2b1a18ca65",
            "owner_id": "854653744080",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "devops-pipeline-igw",
              "Owner": "Mounika Vasireddy",
              "Project": "devops-pipeline"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "devops-pipeline-igw",
              "Owner": "Mounika Vasireddy",
              "Project": "devops-pipeline"
            },
            "vpc_id": "vpc-0c3ab690df25ee3e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:854653744080:route-table/rtb-03683574f20fdcc4b",
            "id": "rtb-03683574f20fdcc4b",
            "owner_id": "854653744080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-064a64b2b1a18ca65",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "devops-pipeline-rt",
              "Owner": "Mounika Vasireddy",
              "Project": "devops-pipeline"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "devops-pipeline-rt",
              "Owner": "Mounika Vasireddy",
              "Project": "devops-pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3ab690df25ee3e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e868af3143909ec",
            "route_table_id": "rtb-03683574f20fdcc4b",
            "subnet_id": "subnet-09324770f58ca3342"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:854653744080:security-group/sg-049c5ef130198e24b",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049c5ef130198e24b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "devops-pipeline-sg",
            "name_prefix": "",
            "owner_id": "854653744080",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "devops-pipeline-sg",
              "Owner": "Mounika Vasireddy",
              "Project": "devops-pipeline"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "devops-pipeline-sg",
              "Owner": "Mounika Vasireddy",
              "Project": "devops-pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3ab690df25ee3e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:854653744080:subnet/subnet-09324770f58ca3342",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09324770f58ca3342",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "854653744080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "devops-pipeline-subnet",
              "Owner": "Mounika Vasireddy",
              "Project": "devops-pipeline"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "devops-pipeline-subnet",
              "Owner": "Mounika Vasireddy",
              "Project": "devops-pipeline"
            },
            "vpc_id": "vpc-0c3ab690df25ee3e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:854653744080:vpc/vpc-0c3ab690df25ee3e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c667700c16e9035",
            "default_route_table_id": "rtb-0621678c48d94c35a",
            "default_security_group_id": "sg-0a956ee550b22dcb3",
            "dhcp_options_id": "dopt-0299c45e85b5ff826",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c3ab690df25ee3e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0621678c48d94c35a",
            "owner_id": "854653744080",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "devops-pipeline-vpc",
              "Owner": "Mounika Vasireddy",
              "Project": "devops-pipeline"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "devops-pipeline-vpc",
              "Owner": "Mounika Vasireddy",
              "Project": "devops-pipeline"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}